Closed Bug 1394874 Opened 7 years ago Closed 7 years ago

Undefined functions due to missing includes or function ordering in ipc/mscom/InterfaceRegistrationAnnotator.cpp

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox57 --- fixed

People

(Reporter: tjr, Assigned: tjr)

References

(Blocks 1 open bug)

Details

(Whiteboard: [tor])

Attachments

(1 file)

> error: no matching function for call to ‘GetStringValue > error: ‘nsPrintfCString’ was not declared in this scope
FYI you might want to wait until 5b4d9dacb44d7c1fea47d1057e78395ca3da7b55 merges to central, as there will be merge conflicts.
Attachment #8902327 - Flags: review?(aklotz)
If the patch looks good I can rebase it before landing.
Depends on: 1383501
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → DUPLICATE
I marked-as-duplicate the wrong bug
Status: RESOLVED → REOPENED
Resolution: DUPLICATE → ---
Status: REOPENED → NEW
Comment on attachment 8902327 [details] Bug 1394874 Fix function order and add include to fix MinGW build https://reviewboard.mozilla.org/r/173864/#review179132
Attachment #8902327 - Flags: review?(aklotz) → review+
Rebased now that the rev has landed. Try run: https://treeherder.mozilla.org/#/jobs?repo=try&revision=2da78038151e5662948779e5bf502afba4bc7438 Once that's green I'll mark for checkin.
Keywords: checkin-needed
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/autoland/rev/f854addeb3f0 Fix function order and add include to fix MinGW build r=aklotz
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 7 years ago7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: