Bug 1394874 Fix function order and add include to fix MinGW build r=aklotz

nsPrintfCString.h was not included, so it caused an error
GetStringValue was called before it was defined

MozReview-Commit-ID: HYoyWyaxqaZ